Fix z-index positioning opacity issue

--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -28,6 +28,7 @@ html, body
     opacity: 75%;
     position: absolute;
     width: 100%;
+    z-index: 1;
 }
 
 // Navbar container
@@ -94,6 +95,8 @@ nav
     // background-color: $dark-grey;
     border-radius: 15px;
     height: 75vh;
+    position: relative;
+    z-index: 10;
 
     &.outline
     {
@@ -106,6 +109,8 @@ nav
 {
     border-radius: 15px;
     height: 75vh;
+    position: relative;
+    z-index: 10;
 
     &.placeholder
     {
@@ -116,6 +121,9 @@ nav
 
 .copywrite
 {
+    position: relative;
+    z-index: 10;
+
     p
     {
         font-size: 1.5em;
